src/llvm/wrapper/core/module.nim


# proc getDebugLocDirectory*(val: ValueRef; length: ptr cuint): cstring {.cdecl, importc: "LLVMGetDebugLocDirectory", dynlib: LLVMlib.}
#     ##  Return the directory of the debug location for this value, which must be
#     ##  an llvm::Instruction, llvm::GlobalVariable, or llvm::Function.
#     ##
#     ##  @see llvm::Instruction::getDebugLoc()
#     ##  @see llvm::GlobalVariable::getDebugInfo()
#     ##  @see llvm::Function::getSubprogram()

# proc getDebugLocFilename*(val: ValueRef; length: ptr cuint): cstring {.cdecl, importc: "LLVMGetDebugLocFilename", dynlib: LLVMlib.}
#     ##  Return the filename of the debug location for this value, which must be
#     ##  an llvm::Instruction, llvm::GlobalVariable, or llvm::Function.
#     ##
#     ##  @see llvm::Instruction::getDebugLoc()
#     ##  @see llvm::GlobalVariable::getDebugInfo()
#     ##  @see llvm::Function::getSubprogram()

# proc getDebugLocLine*(val: ValueRef): cuint {.cdecl, importc: "LLVMGetDebugLocLine", dynlib: LLVMlib.}
#     ##  Return the line number of the debug location for this value, which must be
#     ##  an llvm::Instruction, llvm::GlobalVariable, or llvm::Function.
#     ##
#     ##  @see llvm::Instruction::getDebugLoc()
#     ##  @see llvm::GlobalVariable::getDebugInfo()
#     ##  @see llvm::Function::getSubprogram()

# proc getDebugLocColumn*(val: ValueRef): cuint {.cdecl, importc: "LLVMGetDebugLocColumn", dynlib: LLVMlib.}
#     ##  Return the column number of the debug location for this value, which must be
#     ##  an llvm::Instruction.
#     ##
#     ##  @see llvm::Instruction::getDebugLoc()

proc addFunction*(self: Module, name: string, fnty: Type): Value =
    ##  Add a function to a module under a specified name.
    ## 
    ##  Wrapping:
    ##  * `addFunction(Moduleref, cstring, TypeRef)<../llvm/Core.html#addFunction,ModuleRef,cstring,TypeRef>`_
    runnableExamples:
        import llvm

        var
            `mod` = newModule("main")
            fnty = functionType(voidType(), @[])
            fn = `mod`.addFunction("test", fnty)

        assert $`mod` == """; ModuleID = 'main'
source_filename = "main"

declare void @test()
"""

    newValue(self.module.addFunction(name, fnty.typ))

# proc getNamedFunction*(m: ModuleRef; name: cstring): ValueRef {.cdecl, importc: "LLVMGetNamedFunction", dynlib: LLVMlib.}
#     ##  Obtain a Function value from a Module by its name.
#     ##
#     ##  The returned value corresponds to a llvm::Function value.
#     ##
#     ##  @see llvm::Module::getFunction()

# proc getFirstFunction*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetFirstFunction", dynlib: LLVMlib.}
#     ##  Obtain an iterator to the first Function in a Module.
#     ##
#     ##  @see llvm::Module::begin()

# proc getLastFunction*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetLastFunction", dynlib: LLVMlib.}
#     ##  Obtain an iterator to the last Function in a Module.
#     ##
#     ##  @see llvm::Module::end()

# proc getNextFunction*(fn: ValueRef): ValueRef {.cdecl, importc: "LLVMGetNextFunction", dynlib: LLVMlib.}
#     ##  Advance a Function iterator to the next Function.
#     ##
#     ##  Returns NULL if the iterator was already at the end and there are no more
#     ##  functions.

# proc getPreviousFunction*(fn: ValueRef): ValueRef {.cdecl, importc: "LLVMGetPreviousFunction", dynlib: LLVMlib.}
#     ##  Decrement a Function iterator to the previous Function.
#     ##
#     ##  Returns NULL if the iterator was already at the beginning and there are
#     ##  no previous functions.

# proc setModuleInlineAsm*(m: ModuleRef; `asm`: cstring) {.cdecl, importc: "LLVMSetModuleInlineAsm", dynlib: LLVMlib.}
#     ## * Deprecated: Use LLVMSetModuleInlineAsm2 instead.
